insurance funnel: Removing unnecessary html tags and styling which corrects the alignment problems and correcting styles accordingly

--- a/app/assets/stylesheets/style.scss
+++ b/app/assets/stylesheets/style.scss
@@ -203,6 +203,9 @@ h3 {
       span.threecol.btn:hover {
         background-color: #2541b2;
         border: 0;
+        label {
+          color:white;
+        }
       }
 
       span.threecol.btn {
